##############################################
#   CMake
##############################################
cmake_minimum_required(VERSION 3.0)


##############################################
#   Source
##############################################
add_subdirectory(json_config)
add_subdirectory(output_upd_client)
add_subdirectory(rotatory)
add_subdirectory(glogger)
add_subdirectory(json_helper)
add_subdirectory(json_helper2)
add_subdirectory(gbuffer)
add_subdirectory(rc_list)
add_subdirectory(timeranger)
add_subdirectory(timeranger2)
add_subdirectory(timeranger3)
add_subdirectory(time_helper2)
add_subdirectory(json_xml)
add_subdirectory(tr_msg1)
add_subdirectory(tr_msg2)
add_subdirectory(tr_msg3)
add_subdirectory(tr_msg4)
add_subdirectory(stats)
add_subdirectory(tr_treedb)

